= Asciidoctor IntelliJ Plugin Changelog

== About

This document provides a high-level view of the changes introduced by release.

[[releasenotes]]
== Release notes

=== 0.30.52 (work in progress)

- avoid confusion in lexer about starting and ending listings if there are blanks in a line starting with dashes
- avoid infinite recursion with too many attributes in anchors

=== 0.30.51 (preview, available from GitHub releases)

- find-references shows also all declaration of attributes with the same name
- search-everywhere also finds attribute declarations
- fix monospace formatting in description lists
- allow curly braces in block IDs, as they can be used as attributes
- don't try to resolve links with unresolved or ambiguous variants; don't resolve links starting at root level or lead to URLs, resolve attributes in anchors
- parse attributes in anchor definitions

=== 0.30.50 (preview, available from GitHub releases)

- index TODOs only in comments for TODO window (#452)
- improve parser/lexer to support continuation after hard break (again)
- new live template to surround some selected text with tag comments to use in an include (#450)

=== 0.30.49 (preview, available from GitHub releases)

- improving link validation with Antora (#449)
- improving passthrough detection in lexer (#449)

=== 0.30.48 (preview, available from GitHub releases)

- don't create an anchor via intent for a section when one is already present (#446)
- improve parser/lexer to support continuation after hard break
- fix focus problems when switching preview modes using keyboard macros (#448)
- improve checking reference anchors and resolving (#436)
- recognize open block with style source as listing (#401)
- Resolve two colons (`::`) as ROOT module in Antora modules instead of current module (#449)

=== 0.30.47 (preview, available from GitHub releases)

- speedup lookups, validations and search-everywhere by using stub-based in indexes for block IDs and sections (#439)